app/scss/_section.scss
section {
    //border: 1px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: auto;
    max-width: 40rem;
    padding: 0;

    p {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }
}

section.earth { 
    padding: 15px 105px;
    margin: auto;
    max-width: none;
   
    img {
        display: flex;
        justify-content: center;
        align-items: center;
        color: white;
        text-align: center;
        margin-left: auto;
        margin-right: auto;
        max-width: 300px;             
    }
    
    .sub-header {
        display: flex;
        justify-content: center;
        align-items: center;        
        text-align: center;
        margin: 25px auto;  
        color: $headings;
        font-size: 2.6rem;
        font-weight:600;    
    }

    .sub-header-two {
        display: flex;
        justify-content: center;
        align-items: center;        
        text-align: center;
        margin: 25px auto; 
        color: $headings;
        font-size: 1.3rem;
        font-weight: 100;
    }
}

.brazil-vis-comment {
    padding: 10.2rem 2.5rem 0 2.5rem;
}

.brazil2-vis-comment {
    padding: 10.2rem 2.5rem 0 2.5rem;
}

.norway-vis-comment {
    padding: 10.2rem 2.5rem 0 2.5rem;
}

.norway2-vis-comment {
    padding: 10.2rem 2.5rem 0 2.5rem;
}



.row { display: flex;}
.col-12{
    width: 90vw;
    padding: 15px;
   
}

.col-6 {
    width: 50%;
    padding: 15px;
   
}

.pie-chart-container{
    width: 100vw;
    min-width: 100vw;     
    height: 580px;   
}

.content-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    //overflow: hidden;
}

.img-editor {
    //border: 1px solid red;
    margin-top: 7.8rem;
    margin-bottom: 4rem;
    width: 100%;
    transform: scale(1.25);
}



.img-laptop {
    //border: 1px solid red;
    margin-top: 7.8rem;
    margin-bottom: 6rem;
    width: 100%;
    transform: scale(1.52);
}

.empty {
    //border: 1px solid magenta;
    width: 100%;
    position: relative;
    height: 26.5rem;
}

.img-phones {
    position: absolute;
    top: 0;
    left: -8px;
    width: 383px;
    margin-top: 7.8rem;
}

.middle {
    //border: 1px solid green;
    height: 62.5rem;
    background-image: url("../images/bg-pattern-circles.svg"), linear-gradient($gradient-3, $gradient-4);
    background-size: 163%, 100%;
    background-position: 50% -1950%, 0% 0%;
    background-repeat: no-repeat, no-repeat;
    border-bottom-left-radius: 100px;
    border-top-right-radius: 100px;
}

.text-block-phones {
    text-align: center;
    width: 98%;

    h3 {
        color: $text-white;
        font-size: 4rem;
        margin-top: 1.4rem;
        line-height: 5rem;
    }

    p {
        margin-top: 1.8rem;
        font-size: 1.7rem;
        color: $text-white;
        line-height: 2.8rem;
        font-weight: 300;
    }
}

.section-laptop {
    padding: 5.0rem 2.5rem 10rem 2.5rem;
}

.img-editor-desktop, .img-laptop-desktop {
    display: none;
}

.hide {
    display: none;

}

.show {
    display: block;
}

